--- a/package.json
+++ b/package.json
@@ -31,8 +31,17 @@
     "@angular/platform-server": "^20.3.0",
     "@angular/router": "^20.3.0",
     "@angular/ssr": "^20.3.9",
+    "@mckit/core": "^19.0.9",
+    "@mckit/table": "^19.0.14",
+    "@ngx-pwa/local-storage": "^19.0.0",
+    "@primeng/themes": "^21.0.2",
+    "@tailwindcss/postcss": "^4.1.18",
     "express": "^5.1.0",
+    "postcss": "^8.5.6",
+    "primeicons": "^7.0.0",
+    "primeng": "^21.0.2",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^4.1.18",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
