Create login and register forms

--- a/package.json
+++ b/package.json
@@ -31,12 +31,17 @@
     "@angular/platform-server": "^20.3.0",
     "@angular/router": "^20.3.0",
     "@angular/ssr": "^20.3.9",
+    "@mckit/auth": "^19.0.9",
     "@mckit/core": "^19.0.9",
+    "@mckit/form": "^19.0.38",
+    "@mckit/monaco-field": "^19.0.4",
     "@mckit/table": "^19.0.14",
     "@ngx-pwa/local-storage": "^19.0.0",
     "@primeng/themes": "^21.0.2",
+    "@primeuix/themes": "^2.0.2",
     "@tailwindcss/postcss": "^4.1.18",
     "express": "^5.1.0",
+    "ngx-monaco-editor-v2": "^20.3.0",
     "postcss": "^8.5.6",
     "primeicons": "^7.0.0",
     "primeng": "^21.0.2",
