--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,9 @@
     "importHelpers": true,
     "target": "ES2022",
     "paths": {
+      "@core/*": ["./src/app/core/*"],
+      "@shared/*": ["./src/app/shared/*"],
+      "@features/*": ["./src//app/features/*"],
       "@/*": ["./src/*"]
     },
     "module": "preserve"
