--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
       "@core/*": ["./src/app/core/*"],
       "@shared/*": ["./src/app/shared/*"],
       "@features/*": ["./src//app/features/*"],
+      "@layout/*": ["./src//app/layout/*"],
       "@/*": ["./src/*"]
     },
     "module": "preserve"
