Use MCOdataTableComponent to retrieve data

--- a/package.json
+++ b/package.json
@@ -34,8 +34,12 @@
     "@angular/ssr": "^20.3.9",
     "@mckit/auth": "^19.0.9",
     "@mckit/core": "^19.0.9",
+    "@mckit/filter": "^19.0.6",
     "@mckit/form": "^19.0.38",
+    "@mckit/layout-core": "^19.0.8",
+    "@mckit/loader": "^19.0.0",
     "@mckit/monaco-field": "^19.0.4",
+    "@mckit/odata": "^19.0.10",
     "@mckit/table": "^19.0.14",
     "@ngx-pwa/local-storage": "^19.0.0",
     "@primeng/themes": "^21.0.2",
